examples/misc/error/compilation/module_import-not-found.bfr
open import "./file"

let main = []